@@ -1,6 +1,6 @@
 Package: Matrix
 Version: 0.98-7
-Date: 2005-09-xx
+Date: 2005-09-08
 Title: A Matrix package for R
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler <maechler@stat.math.ethz.ch>
 Maintainer: Douglas Bates <bates@stat.wisc.edu>
