@@ -8,6 +8,9 @@
 \alias{crossprod,ddenseMatrix,sparseMatrix-method}
 \alias{coerce,graph,sparseMatrix-method}
 \alias{coerce,graphNEL,sparseMatrix-method}
+\alias{coerce,sparseMatrix,graph-method}
+\alias{coerce,sparseMatrix,graphNEL-method}
+\alias{coerce,dgTMatrix,graphNEL-method}
 \title{Virtual Class "sparseMatrix" --- Mother of Sparse Matrices}
 \description{Virtual Mother Class of All Sparse Matrices}
 \section{Slots}{
