@@ -1,3 +1,11 @@
+2005-09-08  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* inst/test-tools.R: new file collecting the utility functions used
+		in ./tests/*.R
+
+	* R/ddenseMatrix.R (cbind2): new methods for "numeric" and "matrix"
+	* R/Matrix.R (cbind2): methods for NULL and missing
+
 2005-08-31  Martin Maechler  <maechler@stat.math.ethz.ch>
 
 	* R/AllClass.R: new "index" class for "[" and "[<-":
